--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -103,7 +103,7 @@ jobs:
       - name: install libQt5Core
         run: |
           sudo apt-get update
-          sudo apt-get install libqt5core5a
+          sudo apt-get install libqt5core5a libqt5gui5
 
       - name: checkout code
         uses: actions/checkout@v2
@@ -126,7 +126,7 @@ jobs:
       - name: install libQt5Core
         run: |
           sudo apt-get update
-          sudo apt-get install libqt5core5a
+          sudo apt-get install libqt5core5a libqt5gui5
 
       - name: checkout code
         uses: actions/checkout@v2
@@ -149,7 +149,7 @@ jobs:
       - name: install libQt5Core
         run: |
           sudo apt-get update
-          sudo apt-get install libqt5core5a
+          sudo apt-get install libqt5core5a libqt5gui5
 
       - name: checkout code
         uses: actions/checkout@v2
