--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -100,7 +100,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-qt]
     steps:
-      - name: install libQt5Core
+      - name: install Qt libraries
         run: |
           sudo apt-get update
           sudo apt-get install libqt5core5a libqt5gui5
@@ -123,7 +123,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-qt]
     steps:
-      - name: install libQt5Core
+      - name: install Qt libraries
         run: |
           sudo apt-get update
           sudo apt-get install libqt5core5a libqt5gui5
@@ -146,7 +146,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-qt]
     steps:
-      - name: install libQt5Core
+      - name: install Qt libraries
         run: |
           sudo apt-get update
           sudo apt-get install libqt5core5a libqt5gui5
