--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -8,6 +8,8 @@ env:
 
 jobs:
 
+  # we use Ubuntu-20.04 for Qt5.12 support
+
 
   ###############################################################################
   ##
@@ -17,7 +19,7 @@ jobs:
 
   build-qt:
     name: build Qt applications
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       # https://github.com/jurplel/install-qt-action
       - name: Cache Qt
@@ -47,7 +49,7 @@ jobs:
 
   build-wasm:
     name: build WebAssembly binaries
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container:
       image: trzeci/emscripten:1.39.17-upstream
     steps:
@@ -66,7 +68,7 @@ jobs:
 
   build-js:
     name: build Web App
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: checkout code
         uses: actions/checkout@v2
@@ -97,7 +99,7 @@ jobs:
 
   test-blargg:
     name: run Blargg's test suite
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [build-qt]
     steps:
       - name: install Qt libraries
@@ -120,7 +122,7 @@ jobs:
 
   test-gambatte:
     name: run Gambatte test suite
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [build-qt]
     steps:
       - name: install Qt libraries
@@ -143,7 +145,7 @@ jobs:
 
   test-mooneye-gb:
     name: run Mooneye GB test suite
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [build-qt]
     steps:
       - name: install Qt libraries
