--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -102,9 +102,9 @@ jobs:
         run: |
           if [ $REF == 'refs/heads/master' ]
           then
-            echo "::set-output name=base_href::/AGE"
+            echo "::set-output name=base_href::/AGE/"
           else
-            echo "::set-output name=base_href::/AGE/$REF"
+            echo "::set-output name=base_href::/AGE/$REF/"
           fi
 
       - name: build Web App
