--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -65,7 +65,7 @@ jobs:
     name: build WebAssembly binaries
     runs-on: ubuntu-20.04
     container:
-      image: trzeci/emscripten:1.39.17-upstream
+      image: emscripten/emsdk:2.0.7
     steps:
       - name: checkout code
         uses: actions/checkout@v2
