--- a/.github/workflows/age-ci.yml
+++ b/.github/workflows/age-ci.yml
@@ -7,22 +7,6 @@ env:
   ARTIFACT_PATH: build/artifacts
 
 jobs:
-  #
-  # Ubuntu, Qt & install-qt-action
-  #
-  # Ubuntu 18.04 comes with Qt 5.9.5 libraries
-  # e.g. https://packages.ubuntu.com/bionic/libqt5core5a
-  #
-  # Ubuntu 20.04 comes with Qt 5.12.8 libraries
-  # e.g. https://packages.ubuntu.com/focal/libqt5core5a
-  #
-  # install-qt-action v2.7.0 installs Qt 5.12.9 by default
-  # https://github.com/jurplel/install-qt-action/releases/tag/v2.7.0
-  #
-  #  => use Ubuntu 20.04 for more recent Qt version,
-  #     & install compatible Qt version with install-qt-action
-  #
-
 
   ###############################################################################
   ##
@@ -30,31 +14,48 @@ jobs:
   ##
   ###############################################################################
 
-  build-qt:
-    name: build Qt applications
+#  build-qt:
+#    name: build Qt applications
+#    runs-on: ubuntu-20.04
+#    steps:
+#      # https://github.com/jurplel/install-qt-action
+#      - name: cache Qt
+#        id: cache-qt
+#        uses: actions/cache@v1
+#        with:
+#          path: ../Qt
+#          key: ${{ runner.os }}-Qt-cache-5.12.8
+#
+#      - name: install Qt
+#        uses: jurplel/install-qt-action@v2
+#        with:
+#          version: '5.12.8'
+#          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+#
+#      - name: checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: build AGE
+#        run: build/age_ci.sh qt release
+#
+#      - name: upload Qt artifact
+#        uses: actions/upload-artifact@v1
+#        with:
+#          name: ${{ env.ARTIFACT_NAME }}
+#          path: ${{ env.ARTIFACT_PATH }}
+
+
+  build-test-runner:
+    name: build test runner binary
     runs-on: ubuntu-20.04
     steps:
-      # https://github.com/jurplel/install-qt-action
-      - name: cache Qt
-        id: cache-qt
-        uses: actions/cache@v1
-        with:
-          path: ../Qt
-          key: ${{ runner.os }}-Qt-cache-5.12.8
-
-      - name: install Qt
-        uses: jurplel/install-qt-action@v2
-        with:
-          version: '5.12.8'
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
-
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: build AGE
-        run: build/age_ci.sh qt release
+      - name: build binaries
+        run: build/age_ci.sh test_runner Release
 
-      - name: upload Qt artifact
+      - name: upload test runner artifact
         uses: actions/upload-artifact@v1
         with:
           name: ${{ env.ARTIFACT_NAME }}
@@ -62,7 +63,7 @@ jobs:
 
 
   build-wasm:
-    name: build WebAssembly binaries
+    name: build WebAssembly binary
     runs-on: ubuntu-20.04
     container:
       image: emscripten/emsdk:2.0.7
@@ -86,106 +87,106 @@ jobs:
   ##
   ###############################################################################
 
-  test-blargg:
-    name: run Blargg's test suite
-    runs-on: ubuntu-20.04
-    needs: [build-qt]
-    steps:
-#      - name: install Qt libraries
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install libqt5core5a libqt5gui5
-      - name: cache Qt
-        id: cache-qt
-        uses: actions/cache@v1
-        with:
-          path: ../Qt
-          key: ${{ runner.os }}-Qt-cache-5.12.8
-
-      - name: install Qt
-        uses: jurplel/install-qt-action@v2
-        with:
-          version: '5.12.8'
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
-
-      - name: checkout code
-        uses: actions/checkout@v2
-
-      - name: download artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: ${{ env.ARTIFACT_NAME }}
-          path: ${{ env.ARTIFACT_PATH }}
-
-      - name: run tests
-        run: build/age_ci.sh test blargg
-
-
-  test-gambatte:
-    name: run Gambatte test suite
-    runs-on: ubuntu-20.04
-    needs: [build-qt]
-    steps:
-#      - name: install Qt libraries
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install libqt5core5a libqt5gui5
-      - name: cache Qt
-        id: cache-qt
-        uses: actions/cache@v1
-        with:
-          path: ../Qt
-          key: ${{ runner.os }}-Qt-cache-5.12.8
-
-      - name: install Qt
-        uses: jurplel/install-qt-action@v2
-        with:
-          version: '5.12.8'
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
-
-      - name: checkout code
-        uses: actions/checkout@v2
-
-      - name: download artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: ${{ env.ARTIFACT_NAME }}
-          path: ${{ env.ARTIFACT_PATH }}
-
-      - name: run tests
-        run: build/age_ci.sh test gambatte
-
-
-  test-mooneye-gb:
-    name: run Mooneye GB test suite
-    runs-on: ubuntu-20.04
-    needs: [build-qt]
-    steps:
-#      - name: install Qt libraries
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get install libqt5core5a libqt5gui5
-      - name: cache Qt
-        id: cache-qt
-        uses: actions/cache@v1
-        with:
-          path: ../Qt
-          key: ${{ runner.os }}-Qt-cache-5.12.8
-
-      - name: install Qt
-        uses: jurplel/install-qt-action@v2
-        with:
-          version: '5.12.8'
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
-
-      - name: checkout code
-        uses: actions/checkout@v2
-
-      - name: download artifacts
-        uses: actions/download-artifact@v1
-        with:
-          name: ${{ env.ARTIFACT_NAME }}
-          path: ${{ env.ARTIFACT_PATH }}
-
-      - name: run tests
-        run: build/age_ci.sh test mooneye-gb
+#  test-blargg:
+#    name: run Blargg's test suite
+#    runs-on: ubuntu-20.04
+#    needs: [build-qt]
+#    steps:
+##      - name: install Qt libraries
+##        run: |
+##          sudo apt-get update
+##          sudo apt-get install libqt5core5a libqt5gui5
+#      - name: cache Qt
+#        id: cache-qt
+#        uses: actions/cache@v1
+#        with:
+#          path: ../Qt
+#          key: ${{ runner.os }}-Qt-cache-5.12.8
+#
+#      - name: install Qt
+#        uses: jurplel/install-qt-action@v2
+#        with:
+#          version: '5.12.8'
+#          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+#
+#      - name: checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: download artifacts
+#        uses: actions/download-artifact@v1
+#        with:
+#          name: ${{ env.ARTIFACT_NAME }}
+#          path: ${{ env.ARTIFACT_PATH }}
+#
+#      - name: run tests
+#        run: build/age_ci.sh test blargg
+#
+#
+#  test-gambatte:
+#    name: run Gambatte test suite
+#    runs-on: ubuntu-20.04
+#    needs: [build-qt]
+#    steps:
+##      - name: install Qt libraries
+##        run: |
+##          sudo apt-get update
+##          sudo apt-get install libqt5core5a libqt5gui5
+#      - name: cache Qt
+#        id: cache-qt
+#        uses: actions/cache@v1
+#        with:
+#          path: ../Qt
+#          key: ${{ runner.os }}-Qt-cache-5.12.8
+#
+#      - name: install Qt
+#        uses: jurplel/install-qt-action@v2
+#        with:
+#          version: '5.12.8'
+#          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+#
+#      - name: checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: download artifacts
+#        uses: actions/download-artifact@v1
+#        with:
+#          name: ${{ env.ARTIFACT_NAME }}
+#          path: ${{ env.ARTIFACT_PATH }}
+#
+#      - name: run tests
+#        run: build/age_ci.sh test gambatte
+#
+#
+#  test-mooneye-gb:
+#    name: run Mooneye GB test suite
+#    runs-on: ubuntu-20.04
+#    needs: [build-qt]
+#    steps:
+##      - name: install Qt libraries
+##        run: |
+##          sudo apt-get update
+##          sudo apt-get install libqt5core5a libqt5gui5
+#      - name: cache Qt
+#        id: cache-qt
+#        uses: actions/cache@v1
+#        with:
+#          path: ../Qt
+#          key: ${{ runner.os }}-Qt-cache-5.12.8
+#
+#      - name: install Qt
+#        uses: jurplel/install-qt-action@v2
+#        with:
+#          version: '5.12.8'
+#          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+#
+#      - name: checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: download artifacts
+#        uses: actions/download-artifact@v1
+#        with:
+#          name: ${{ env.ARTIFACT_NAME }}
+#          path: ${{ env.ARTIFACT_PATH }}
+#
+#      - name: run tests
+#        run: build/age_ci.sh test mooneye-gb
