run screenshot based tests

--- a/src/age_tester/CMakeLists.txt
+++ b/src/age_tester/CMakeLists.txt
@@ -3,8 +3,11 @@ add_executable(
         age_tester_arguments.cpp
         age_tester_arguments.hpp
         age_tester_main.cpp
+        age_tester_run_tests.cpp
+        age_tester_run_tests.hpp
         age_tester_tasks.cpp
         age_tester_tasks.hpp
+        age_tester_tasks_blargg.cpp
         age_tester_tasks_gambatte.cpp
         age_tester_tasks_mooneye_gb.cpp
         age_tester_thread_pool.hpp
