--- a/src/age_wasm/CMakeLists.txt
+++ b/src/age_wasm/CMakeLists.txt
@@ -1,91 +1,13 @@
-
-##############################################
-######                                  ######
-###### build the AGE WebAssembly binary ######
-######                                  ######
-##############################################
-
 #
-# CMake Links:
-#
-#   CMake Documentation: https://cmake.org/cmake/help/v3.10/
-#   CMake Tutorial:      https://cmake.org/cmake-tutorial/
+# Clion & Emscripten:
+# https://tech-en.netlify.app/articles/en522284/index.html
 #
 
-#cmake_minimum_required (VERSION 3.7.2)
-
-#project (AGE-WebAssembly)
-
-
-#####   source files
-
-#set (DIR_AGE             "../../src")
-#set (DIR_AGE_COMMON      ${DIR_AGE}/age_common)
-#set (DIR_AGE_EMULATOR_GB ${DIR_AGE}/age_emulator_gb)
-#set (DIR_AGE_WASM        ${DIR_AGE}/age_wasm)
-
-#set (SOURCES_AGE_COMMON
-#    ${DIR_AGE_COMMON}/age_debug.cpp
-#    ${DIR_AGE_COMMON}/age_downsampler.cpp
-#    ${DIR_AGE_COMMON}/age_emulator.cpp
-#    ${DIR_AGE_COMMON}/age_pcm_ring_buffer.cpp
-#    ${DIR_AGE_COMMON}/age_screen_buffer.cpp
-#    ${DIR_AGE_COMMON}/age_utilities.cpp
-#)
-
-#set (SOURCES_AGE_EMULATOR_GB
-#    ${DIR_AGE_EMULATOR_GB}/common/age_gb_clock.cpp
-#    ${DIR_AGE_EMULATOR_GB}/common/age_gb_device.cpp
-#    ${DIR_AGE_EMULATOR_GB}/common/age_gb_events.cpp
-#    ${DIR_AGE_EMULATOR_GB}/common/age_gb_interrupts.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_bus.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_cpu.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_cpu_opcodes.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_div.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_emulator.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_emulator_impl.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_joypad.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_lcd.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_lcd_irqs.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_lcd_palettes.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_lcd_ports.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_lcd_render.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_lcd_scanline.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_lcd_sprites.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_memory.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_memory_init.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_serial.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_sound.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_sound_io_ports.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_sound_utilities.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_timer.cpp
-#    ${DIR_AGE_EMULATOR_GB}/age_gb_timer_state.cpp
-#)
-
-#set (SOURCES_AGE_WASM
-#    ${DIR_AGE_WASM}/age_wasm.cpp
-#)
-
-
-#####   C++ options
-
-# use C++17
-#set(CMAKE_CXX_STANDARD 17)
-
-# additional include directories
-include_directories (
-    ${EMSCRIPTEN}/system/include
+add_executable(
+        age_wasm
+        age_wasm.cpp
 )
 
-
-#####   AGE binaries
-
-#add_library(age_common STATIC ${SOURCES_AGE_COMMON})
-
-#add_library(age_emulator_gb STATIC ${SOURCES_AGE_EMULATOR_GB})
-#target_link_libraries(age_emulator_gb age_common)
-
-add_executable(age_wasm age_wasm.cpp)
 target_link_libraries(age_wasm age_emulator_gb)
 
 # MODULARIZE=1     to prevent using the global scope
