run age-test-roms, improve CGB speed switch emulation

--- a/src/age_tester/CMakeLists.txt
+++ b/src/age_tester/CMakeLists.txt
@@ -8,6 +8,7 @@ add_executable(
         age_tester_tasks.cpp
         age_tester_tasks.hpp
         age_tester_tasks_acid2.cpp
+        age_tester_tasks_age.cpp
         age_tester_tasks_blargg.cpp
         age_tester_tasks_gambatte.cpp
         age_tester_tasks_mooneye_gb.cpp
