--- a/src/age_tester/CMakeLists.txt
+++ b/src/age_tester/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(
         age_tester_tasks_blargg.cpp
         age_tester_tasks_gambatte.cpp
         age_tester_tasks_mooneye_gb.cpp
+        age_tester_tasks_same_suite.cpp
         age_tester_thread_pool.hpp
         age_tester_write_log.cpp
 )
