use Google Test for unit testing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,28 @@
+cmake_minimum_required(VERSION 3.14)
 project(AGE)
-
-cmake_minimum_required(VERSION 3.11)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
+# include Google Test, see also:
+# https://google.github.io/googletest/quickstart-cmake.html
+# (commit 8d51ffdfab10b3fba636ae69bc03da4b54f8c235 created on 2021-07-09)
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/8d51ffdfab10b3fba636ae69bc03da4b54f8c235.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+include(GoogleTest)
+
+
+# Compile AGE with rom logging features?
+# This is mostly used to analyse test roms and not suited
+# for casual use (e.g. gaming) as the generated log files
+# can grow really big really fast.
 OPTION(COMPILE_LOGGER "compile AGE with logging enabled") # disabled by default
 if (COMPILE_LOGGER)
     message("compiling AGE with logging enabled")
@@ -15,6 +32,9 @@ else ()
 endif (COMPILE_LOGGER)
 
 
+# include common code:
+#   - utility code
+#   - emulator core
 add_subdirectory(age_common)
 add_subdirectory(age_emulator_gb)
 
