move Google Test configuration to root CMakeLists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,19 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
-# include Google Test, see also:
-# https://google.github.io/googletest/quickstart-cmake.html
-# (commit 8d51ffdfab10b3fba636ae69bc03da4b54f8c235 created on 2021-07-09)
-include(FetchContent)
-FetchContent_Declare(
-        googletest
-        URL https://github.com/google/googletest/archive/8d51ffdfab10b3fba636ae69bc03da4b54f8c235.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-include(GoogleTest)
-
 
 # Compile AGE with rom logging features?
 # This is mostly used to analyse test roms and not suited
@@ -31,15 +18,13 @@ else ()
     message("compiling AGE with logging disabled")
 endif (COMPILE_LOGGER)
 
-
 # include common code:
 #   - utility code
 #   - emulator core
 add_subdirectory(age_common)
 add_subdirectory(age_emulator_gb)
 
-
-# find Qt before including age_qt_gui
+# age_qt_gui requires Qt
 find_package(Qt5 QUIET COMPONENTS Widgets)
 if (Qt5Widgets_FOUND)
     message("Qt5 found => configuring age_qt_gui")
@@ -48,8 +33,7 @@ else ()
     message("Qt5 not found => age_qt_gui not available")
 endif ()
 
-
-# find libpng before including age_cgb_lut and age_tester
+# age_cgb_lut and age_tester require libpng
 find_package(PNG QUIET)
 if (PNG_FOUND)
     message("PNG found => configuring age_cgb_lut and age_tester")
@@ -60,11 +44,34 @@ else ()
     message("PNG not found => age_cgb_lut and age_tester not available")
 endif ()
 
-
-# find emscripten before including age_wasm
+# age_wasm requires emscripten
 if (EMSCRIPTEN)
     message("EMSCRIPTEN=${EMSCRIPTEN} => configuring age_wasm")
     add_subdirectory(age_wasm)
 else ()
     message("EMSCRIPTEN not set => age_wasm not available")
 endif ()
+
+
+
+# include Google Test, see also:
+# https://google.github.io/googletest/quickstart-cmake.html
+# (commit 8d51ffdfab10b3fba636ae69bc03da4b54f8c235 created on 2021-07-09)
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/8d51ffdfab10b3fba636ae69bc03da4b54f8c235.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+include(GoogleTest)
+
+# age google test executable
+add_executable(
+        age_gtest
+        age_emulator_gb/common/age_gb_events.test.cpp
+)
+target_link_libraries(age_gtest age_emulator_gb age_common gtest_main)
+target_include_directories(age_gtest PUBLIC api)
+gtest_discover_tests(age_gtest)
